5134: Fix material item information floating on mobile
Without clearing and with sufficiently long dates as the first entry
then the third entry may creep up to the right underneath the second
one on mobile.

With the clearing odd numbered items should stay to the left.

--- a/themes/ddbasic/sass/components/ting-object/material-item.scss
+++ b/themes/ddbasic/sass/components/ting-object/material-item.scss
@@ -191,6 +191,10 @@
         box-sizing: border-box;
         padding-right: 10px;
         margin: 0 0 20px;
+
+        &:nth-child(odd) {
+          clear: left;
+        }
       }
 
       &.loan-date {
